--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
     <h1>Welcome to Applied Programming Languages</h1><br />
 	This is some text I have added.
+	
+	<h1> Text added by George </h1>
 
 
 
